--- a/django_movies/movieratings/templates/movie_list.html
+++ b/django_movies/movieratings/templates/movie_list.html
@@ -7,7 +7,7 @@
     <ul>
         {% for movie in movies %}
             <li>
-                <a href="{{movie.url}}">{{movie.title}}</a>
+                <a href="movie/{{ movie.id }}">{{movie.title}}</a>
             </li>
         {% endfor %}
     </ul>
