--- a/django_movies/movieratings/templates/movie_detail.html
+++ b/django_movies/movieratings/templates/movie_detail.html
@@ -6,5 +6,7 @@
     <h1>Movie detail</h1>
     <h2>{{movie.title}}</h2>
     <h3>{{movie.url}}</h3>
+    <h4>Average Rating: {{movie.avg_rating}} </h4>
+    <h4>Main menu:<a href="../movie_list">Movie list</a> </h4>
 </body>
 </html>
