--- a/django_movies/movieratings/templates/rater_detail.html
+++ b/django_movies/movieratings/templates/rater_detail.html
@@ -15,7 +15,7 @@
             <a href="../movie/{{ rating.movie.id }}/">{{rating.movie_id}}</a>
             rating: {{ rating.rating }}
             </h2>
-            <h2>{{Movie.title}}</h2>
+            <h2>{{rating.movie.title}}</h2>
         {% endfor %}
         </ul>
 </body>
