--- a/django_movies/movieratings/templates/movie_detail.html
+++ b/django_movies/movieratings/templates/movie_detail.html
@@ -4,6 +4,11 @@
 </head>
 <body>
     <h1>Movie detail</h1>
+    <form action="/login/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Logout" />
+    </form>
     <h2>{{movie.title}}</h2>
     <h3>{{movie.url}}</h3>
     <h4>Average Rating: {{movie.avg_rating}} </h4>
