--- a/django_movies/movieratings/templates/rater_detail.html
+++ b/django_movies/movieratings/templates/rater_detail.html
@@ -4,6 +4,11 @@
 </head>
 <body>
     <h1>Rater detail</h1>
+    <form action="/login/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Logout" />
+    </form>
     <h2>age: {{rater.age}}</h2>
     <h2>gender: {{rater.gender}}</h2>
     <h2>occupation: {{rater.occupation}}</h2>
