--- a/django_movies/movieratings/templates/rater_list.html
+++ b/django_movies/movieratings/templates/rater_list.html
@@ -3,6 +3,8 @@
     <title>Rater list</title>
 </head>
 <body>
+    <h2>Rater id: {{ user.rater.id }}</h2>
+    <a href="index">Home</a> </h4>
     <h1>Raters</h1>
     <ul>
         {% for rater in raters %}
