--- a/django_movies/movieratings/templates/movie_detail.html
+++ b/django_movies/movieratings/templates/movie_detail.html
@@ -4,6 +4,8 @@
 </head>
 <body>
     <h1>Movie detail</h1>
+    <h2>Rater id: {{ user.rater.id }}</h2>
+    <a href="../index">Home</a> </h4>
     <form action="/login/" method="post">
         {% csrf_token %}
         {{ form }}
