--- a/django_movies/movieratings/templates/movie_list.html
+++ b/django_movies/movieratings/templates/movie_list.html
@@ -3,6 +3,8 @@
     <title>Movie list</title>
 </head>
 <body>
+    <h2>Rater id: {{ user.rater.id }}</h2>
+    <a href="index">Home</a> </h4>
     <h1>Movies</h1>
     <ul>
         {% for movie in movies %}
