--- a/django_movies/movieratings/templates/top_movies.html
+++ b/django_movies/movieratings/templates/top_movies.html
@@ -3,6 +3,7 @@
     <title>Top 20  movies</title>
 </head>
 <body>
+    <a href="index">Home</a> </h4>
     <h1>Top 20 Movies</h1>
     <ol>
         {% for movie in top_movies %}
