add rating template

--- a/django_movies/movieratings/templates/profile.html
+++ b/django_movies/movieratings/templates/profile.html
@@ -4,10 +4,12 @@
     <title>User Profile</title>
 </head>
 <body>
-        <h3><a href="../../movie_list">Movie list</a>
+        <h3>
+            <a href="../../index">Home</a>
+            <a href="../../movie_list">Movie list</a>
             <a href="../../rater_list">Index of Raters</a>
             <a href="../../top_movies">Top 20 Movies</a>
-            <a href="../../index">Home</a> </h4>
+            <a href="../../add_rating">Rate a movie</a>
             <a href="movie/2">Search Movies by Title</a>
         </h3>
     <h2>Rater id: {{ user.rater.id }}</h2>
