--- a/django_movies/movieratings/templates/base.html
+++ b/django_movies/movieratings/templates/base.html
@@ -2,7 +2,7 @@
 <head>
    <title>Movie Ratings Homepage</title>
 </head>
-<body>
+<body>    {% csrf_token %}
    <h1>Movie Ratings for Older Movies</h1>
    <ul>
        <li>
