--- a/django_movies/movieratings/templates/movie_list.html
+++ b/django_movies/movieratings/templates/movie_list.html
@@ -2,7 +2,7 @@
 <head>
     <title>Movie list</title>
 </head>
-<body>
+<body>    {% csrf_token %}
     <h2>Rater id: {{ user.rater.id }}</h2>
     <a href="index">Home</a> </h4>
     <h1>Movies</h1>
