--- a/django_movies/movieratings/templates/profile.html
+++ b/django_movies/movieratings/templates/profile.html
@@ -4,12 +4,16 @@
     <title>User Profile</title>
 </head>
 <body>
+    <form id="rate movie" action='../../add_rating' >
+        {% csrf_token %}
+        <button type="submit">Rate New Movie</button>
+    </form>
+
         <h3>
             <a href="../../index">Home</a>
             <a href="../../movie_list">Movie list</a>
             <a href="../../rater_list">Index of Raters</a>
             <a href="../../top_movies">Top 20 Movies</a>
-            <a href="../../add_rating">Rate a movie</a>
             <a href="movie/2">Search Movies by Title</a>
         </h3>
     <h2>Rater id: {{ user.rater.id }}</h2>
@@ -17,8 +21,6 @@
     <h2>gender: {{user.rater.gender}}</h2>
     <h2>occupation: {{user.rater.occupation}}</h2>
     <h2>zip code: {{user.rater.zip_code}}</h2>
-    <ul>
-        </ul>
     <p>These are the movies you've rated:</p>
     {% for rating in request.user.rater.rating_set.all %}
     <ul>
