--- a/django_movies/movieratings/templates/top_movies.html
+++ b/django_movies/movieratings/templates/top_movies.html
@@ -2,7 +2,7 @@
 <head>
     <title>Top 20  movies</title>
 </head>
-<body>
+<body>    {% csrf_token %}
     <a href="index">Home</a> </h4>
     <h1>Top 20 Movies</h1>
     <ol>
