--- a/django_movies/movieratings/templates/add_rating.html
+++ b/django_movies/movieratings/templates/add_rating.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8">
         <title></title>
     </head>
@@ -23,7 +24,21 @@
                 <option value="4">4</option>
                 <option value="4.5">4.5</option>
                 <option value="5">5</option>
-
         </select>
+        <input type="text" name="search" placeholder="Search..">
     </body>
+</html>
+-->
+<html>
+<head><title> Add New Rating</title></head>
+<body>
+    <h1>User ID: {{request.user.id}}</h1>
+    <form method="post" action="">
+        {% csrf_token %}
+        <div id="create_rating">
+            {{ form }}
+            <input type="submit" value="Create new movie rating"/>
+        </div>
+    </form>
+</body>
 </html>
