--- a/django_movies/movieratings/templates/index.html
+++ b/django_movies/movieratings/templates/index.html
@@ -2,9 +2,10 @@
 <head>
    <title>Movie Ratings Homepage</title>
 </head>
-<body>
+<body>    {% csrf_token %}
    <h1>Movie Ratings for Older Movies</h1>
    <ul>
+       <h2>Rater id: {{ user.rater.id }}</h2>
        <li>
            <a href="movie_list">Movie list</a>
        </li>
